<?xml version="1.0"?>
<package format="2">
  <name>violet_actions</name>
  <version>0.0.0</version>
  <description>The violet_actions package</description>

 
  <maintainer email="violet.cunningham@stmartin.edu">Violet Cunningham</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/Violet-C/EE477_Final/tree/master/violet_actions</url>

  <author email="violet.cunningham@stmartin.edu">Violet Cunningham</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    

  </export>
</package>
