<?xml version="1.0"?>
<package format="2">
  <name>violet_topics</name>
  <version>0.0.0</version>
  <description>The violet_topics package</description>
  

  <maintainer email="violet.cunningham@stmartin.edu">Violet Cunningham</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/Violet-C/EE477_Final/tree/master/violet_topics</url>

  <author email="violet.cunningham@stmartin.edu">Violet Cunningham</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
   

  </export>
</package>
